# Mini-IO

./: CHANGELOG.md  README.md  mini-io.cabal
app/: Examples.hs  LambdaIO.hs  Transformers.hs  Uniqueness.hs  UnixJobs.hs
src/: Core.hs  Error.hs  Scope.hs  Types.hs  Utility.hs  World.hs
src/Jobs/: Unix.hs
src/Transformers/: EitherT.hs
src/ffi/: dirs.c  files.c  info.c  io.c
src/ffi/jobs/: unix.c
