cabal-version:      2.4
name:               mini-io
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christoffer Lind Andersen
maintainer:         57995582+Chri692u@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:      src
  c-sources:           src/ffi/io.c, src/ffi/dirs.c, src/ffi/files.c, src/ffi/info.c,
                       src/ffi/jobs/unix.c
  exposed-modules:     World, Core, Types, Error, Utility, Scope,
                       Jobs.Unix,
                       Transformers.EitherT
  build-depends:       base, text, foreign, containers, transformers 
  default-language:    Haskell2010

executable examples
    main-is:          Examples.hs
    build-depends:    base, text, mini-io, foreign
    hs-source-dirs:   app
    default-language: Haskell2010

executable jobs-unix
    main-is:          UnixJobs.hs
    build-depends:    base, text, mini-io, foreign
    hs-source-dirs:   app
    default-language: Haskell2010

executable transformers
    main-is:          Transformers.hs
    build-depends:    base, text, mini-io, foreign, transformers
    hs-source-dirs:   app
    default-language: Haskell2010

executable lambda-io
    main-is:          LambdaIO.hs
    build-depends:    base, text, containers, mini-io
    hs-source-dirs:   app
    default-language: Haskell2010

executable uniqueness
    main-is:          Uniqueness.hs
    build-depends:    base, text, containers, mini-io
    hs-source-dirs:   app
    default-language: Haskell2010